@@ -1,3 +1,9 @@
+Wed Aug 10 23:59:02 CEST 2005 Daniel Veillard <veillard@redhat.com>
+
+	* libgamin/gam_data.c server/gam_kqueue.c server/gam_pidname.c
+	  server/gam_server.c: applied portability patch from Johnny Lam
+	  for NetBSD.
+
 2005-08-10  John McCutchan  <ttb@tentacle.dhs.org>
 
 	* server/gam_dnotify.c: (gam_dnotify_add_subscription),
